--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Web Application Firewall</title>
   </head>
   <body class="navbar-bottom">
     <div id="root"></div>
